# gree-remote

./: .gitignore  .gitmodules  GreeRemote.pro  Info.plist  README.md  crypto.cpp  crypto.h  device.cpp  devicedescriptor.h  devicefinder.cpp  devicefinder.h  mainwindow.h  protocolutils.cpp  protocolutils.h
GreeBlynkBridge/: .gitignore  GreeBlynkBridge.sln  README.md
GreeBlynkBridge/GreeBlynkBridge/: GreeBlynkBridge.csproj  Program.cs  Settings.StyleCop  config.json.example
GreeBlynkBridge/GreeBlynkBridge/Blynk/: BlynkController.cs  PinAttribute.cs  PinConfiguration.cs
GreeBlynkBridge/GreeBlynkBridge/Database/: AirConditionerManager.cs  AirConditionerModel.cs  AirConditionerModelEqualityComparer.cs  DatabaseContext.cs
GreeBlynkBridge/GreeBlynkBridge/Gree/: BindRequestPack.cs  BindResponsePack.cs  Controller.cs  Crypto.cs  DeviceDiscoveryResponse.cs  DeviceInfo.cs  DeviceParameterKeys.cs  DeviceStatus.cs  DeviceStatusChangedEventArgs.cs  DeviceStatusKeys.cs  DeviceStatusRequestPack.cs  DeviceStatusResponsePack.cs  PackInfo.cs  Request.cs  RequestPackInfo.cs  (+2 more)
GreeESP8266/: .gitignore  platformio.ini
GreeESP8266/src/: Gree.cpp  Gree.h  Main.cpp
GreeLib/: GreeLib.pro
GreeLib/include/: device.h  devicefinder.h  greelib.h
GreeLib/src/: device.cpp  devicefinder.cpp  greelib.cpp  protocolutils.cpp  protocolutils.h
GreeLibNG/: .clang-format  .gitignore  CMakeLists.txt
GreeLibNG/include/: GreeLib.h
GreeLibNG/src/: GreeLib.cpp  test_main.cpp
GreeLibNG/src/Cryptography/: Cryptography.h  Utils.cpp  Utils.h  WolfSslCryptography.h
GreeLibNG/src/Protocol/: MessageBuilder.h
GreeRemoteAndroid/: build.gradle
GreeRemoteAndroid/app/: build.gradle  proguard-rules.pro
GreeRemoteGuiQt/: GreeRemoteGuiQt.pro
GreeRemoteGuiQt/resources/: res.qrc
GreeRemoteGuiQt/src/: deviceitem.cpp  deviceitem.h  deviceviewmodel.cpp  deviceviewmodel.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
PythonCLI/: gree.py
resources/: res.qrc
src/: device.cpp  device.h  devicefinder.cpp  devicefinder.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  protocolutils.cpp  protocolutils.h
(+94 files in other folders)
